--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
 
 
     <div class="form1">
+      
+      
       <form action="" method="get" id="helo">
         <div>
+          <h2>Contact Me!</h2>
+          <p>Feel free to message us <i class="fa fa-smile-o" aria-hidden="true"></i></p>
           Email: <br>
           <input type="text" name="" id=""> <br>
 
